# certquest

./: README.md
certquest-api-image-upload/: package-lock.json  package.json
certquest-api-image-upload/src/functions/: uploadImage.ts
certquest-api-main/: pyproject.toml
certquest-api-main/app/: logging_config.py  main.py
certquest-api-main/app/api/: dependencies.py
certquest-api-main/app/api/endpoints/: question_router.py
certquest-api-main/app/db/: cosmosdb_engine.py
certquest-api-main/app/models/: question.py
certquest-api-main/app/repositories/: question_repository.py
certquest-service-image-processor/: function_app.py
certquest-service-image-processor/utils/: blob_manager.py  config.py  image_validator.py  openai_service.py
certquest-ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
certquest-ui/src/: App.tsx  main.tsx
certquest-ui/src/components/: ScreenShotUploader.tsx
certquest-ui/src/features/image-upload/components/: Category.tsx  TagInput.tsx  UploadImage.tsx
certquest-ui/src/features/image-upload/hooks/: useImageInput.ts  useImageUpload.ts
certquest-ui/src/layouts/: AppLayout.tsx
certquest-ui/src/pages/: About.tsx  Home.tsx
certquest-ui/src/shared/components/: Loader.tsx
